# agent-governance

./: .gitignore  CHANGELOG.md  README.md  governance.schema.yaml  pyproject.toml  requirements.txt
adk-multiagent-test/: .env.example  README.md  docker-compose.yml  pyproject.toml
adk-multiagent-test/artifacts/: annotations.feature_matrix.jsonl  feature_matrix_report.azure.json  feature_matrix_report.azure.md  feature_matrix_report.json  feature_matrix_report.md  spans.cloudlogging.jsonl  spans_report.html
adk-multiagent-test/deploy/cloud_run/: Dockerfile  governance.yaml  main.py
adk-multiagent-test/scripts/: run_azure_adk_otel_e2e.py  run_demo.py  run_governance_feature_matrix.py  visualize_spans.py
adk-multiagent-test/scripts/artifacts/: spans.cloudlogging.jsonl  spans_report.html
adk-multiagent-test/src/: __init__.py  config.py  model_wrapper.py
adk-multiagent-test/src/adk_multiagent_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adk-multiagent-test/src/agents/: __init__.py  orchestrator.py  research_agent.py  validator_agent.py
adk-multiagent-test/src/guardrails/: __init__.py  pii_guardrail.py  schema_guardrail.py  topic_guardrail.py  toxicity_guardrail.py
adk-multiagent-test/src/telemetry/: __init__.py  error_handlers.py  setup.py  span_formatter.py  span_helpers.py
adk-multiagent-test/src/tools/: __init__.py  validate_data.py  web_lookup.py
adk-multiagent-test/tests/: conftest.py  test_error_cases.py  test_guardrails.py  test_happy_path.py  test_otel.py
docs/: ADK_E2E_GUIDE.md  ADK_USER_GUIDE.md  CLOUD_RUN_GITHUB_ACTIONS_GUIDE.md  CUSTOMER_QUICKSTART.md  REFERENCE_ARCHITECTURE.md  USER_GUIDE.md
examples/adk_agent/: Dockerfile  agent.py  governance.yaml  guardrails.yaml  model_schema.yaml
examples/cloud_run_api/: Dockerfile  governance.yaml  main.py
examples/github_actions/: cloudrun_adk_multiagent_legacy_credentials.yaml  cloudrun_adk_multiagent_prod_test.yaml  deploy.yaml  eval.yaml
scripts/: init_governance.py  validate_config.py
src/agent_governance/: __init__.py  bootstrap.py  config.py  constants.py  exceptions.py  models.py  runtime.py
src/agent_governance/compliance/: __init__.py  checker.py  report.py
src/agent_governance/dlp/: __init__.py  async_scanner.py  cache.py  redactor.py  scanner.py
src/agent_governance/eval/: __init__.py  datasets.py  experiments.py  harness.py  reporters.py  thresholds.py
src/agent_governance/golden_data/: __init__.py  capture.py  generator.py  loader.py  validator.py  versioner.py
src/agent_governance/guardrails/: __init__.py  (+9 more)
src/agent_governance_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: adk_azure_dlp_demo.py  adk_guardrails_demo.py  adk_otel_e2e_demo.py  bq_registry_demo.py  cloudrun_logging_demo.py  conftest.py
tests/fixtures/: sample_events.json  sample_golden_dataset.jsonl  sample_governance.yaml
tests/unit/: test_adk_middleware.py  test_config.py  test_guardrails.py  test_observability_extensions.py  test_telemetry.py  test_tracing.py
(+46 files in other folders)
